InsuranceOrg/force-app/main/default/objects/vlocity_ins__AgencyPayment__c/vlocity_ins__AgencyPayment__c.object-meta.xml
<CustomObject>
    <description>Represents compensation payments made by the insurance company to an agency/brokerage. Payment may include commissions, fees or adjustments. Master-detail child object of an Agency/Brokerage Account.</description>
    <label>Agency/Brokerage Payment</label>
    <nameField>
        <label>Check #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency/Brokerage Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>