InsuranceOrg/force-app/main/default/objects/vlocity_ins__AgencyPayment__c/fields/vlocity_ins__AgencyBrokerageId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AgencyBrokerageId__c</fullName>
    <label>Agency/Brokerage</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>AgencyBrokeragePayments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>