InsuranceOrg/force-app/main/default/objects/vlocity_ins__AgencyPayment__c/fields/vlocity_ins__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>